@@ -1,3 +1,4 @@
+#export _JAVA_OPTIONS="-XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC -Xverify:none"
 export _JAVA_OPTIONS="-Xverify:none"
 export CONF=linux-x86_64-normal-zero-slowdebug
 export JOBS=16
